styles.css
* {
  padding: 0;
  margin: 0;
}
h3 {
  color: green;
  font-size: 2rem;
  margin-bottom: 2rem;
  font-weight: bolder;
}
h2 {
  font-size: 2.5rem;
  font-weight: bolder;
}
h5 {
  font-size: 2.5rem;
  font-weight: bolder;
}
p {
  font-size: 1.5rem;
}
.bg-img {
  background-image: url("me.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 400px;
  width: 400px;
  border-radius: 50%;
}

#heading1,
#heading2,
#heading3 {
  color: green;
  border: 2px solid black;
}

div {
  border: 2px solid black;
}
/* media */

